deployed styling is broken on mobile deveices, attempt #1 at fixing

--- a/src/Components/IntroModal/intro-modal.css
+++ b/src/Components/IntroModal/intro-modal.css
@@ -1,3 +1,6 @@
+#greeting {
+  font-size: 12px;
+}
 .introModal {
   text-align: center;
   color: black;
